--- a/package.json
+++ b/package.json
@@ -8,12 +8,54 @@
     "test": "nx test"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nrwl/next": "14.1.9",
+    "core-js": "^3.6.5",
+    "next": "12.1.5",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "regenerator-runtime": "0.13.7",
+    "tslib": "^2.3.0"
+  },
   "devDependencies": {
-    "nx": "14.1.9",
     "@nrwl/cli": "14.1.9",
+    "@nrwl/cypress": "^14.1.9",
+    "@nrwl/eslint-plugin-nx": "^14.1.9",
+    "@nrwl/express": "^14.1.9",
+    "@nrwl/jest": "^14.1.9",
+    "@nrwl/js": "^14.1.9",
+    "@nrwl/linter": "^14.1.9",
+    "@nrwl/next": "^14.1.9",
+    "@nrwl/node": "^14.1.9",
+    "@nrwl/nx-cloud": "^14.0.5",
+    "@nrwl/react": "^14.1.9",
+    "@nrwl/storybook": "^14.1.9",
+    "@nrwl/web": "^14.1.9",
     "@nrwl/workspace": "14.1.9",
-    "typescript": "~4.6.2",
-    "prettier": "^2.5.1"
+    "@testing-library/react": "13.1.1",
+    "@types/jest": "27.4.1",
+    "@types/node": "16.11.7",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.3",
+    "@typescript-eslint/eslint-plugin": "~5.18.0",
+    "@typescript-eslint/parser": "~5.18.0",
+    "babel-jest": "27.5.1",
+    "cypress": "^9.1.0",
+    "eslint": "~8.12.0",
+    "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.5.0",
+    "jest": "27.5.1",
+    "nx": "14.1.9",
+    "prettier": "^2.5.1",
+    "react-test-renderer": "18.1.0",
+    "sass": "1.43.2",
+    "ts-jest": "27.1.4",
+    "ts-node": "9.1.1",
+    "typescript": "~4.6.2"
   }
 }
