--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nrwl/next": "14.1.9",
     "core-js": "^3.6.5",
+    "express": "4.17.2",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -33,6 +34,7 @@
     "@nrwl/web": "^14.1.9",
     "@nrwl/workspace": "14.1.9",
     "@testing-library/react": "13.1.1",
+    "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.8",
@@ -40,7 +42,7 @@
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "babel-jest": "27.5.1",
-    "cypress": "^9.1.0",
+    "cypress": "10.0.3",
     "eslint": "~8.12.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "8.1.0",
