--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "toctive",
   "version": "0.0.0",
+  "description": "A monorepo conatins all Toctive private projects",
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
