--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/next": "14.1.9",
+    "@capacitor/android": "^3.6.0",
+    "@capacitor/cli": "^3.6.0",
+    "@capacitor/core": "^3.6.0",
+    "@ionic/cli": "^6.20.1",
     "core-js": "^3.6.5",
     "express": "4.17.2",
     "next": "12.1.5",
@@ -20,21 +23,21 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nrwl/cli": "14.1.9",
-    "@nrwl/cypress": "^14.1.9",
-    "@nrwl/devkit": "14.1.9",
-    "@nrwl/eslint-plugin-nx": "^14.1.9",
-    "@nrwl/express": "^14.1.9",
-    "@nrwl/jest": "^14.1.9",
-    "@nrwl/js": "^14.1.9",
-    "@nrwl/linter": "^14.1.9",
-    "@nrwl/next": "^14.1.9",
-    "@nrwl/node": "^14.1.9",
+    "@nrwl/cli": "14.4.2",
+    "@nrwl/cypress": "^14.4.2",
+    "@nrwl/devkit": "^14.4.2",
+    "@nrwl/eslint-plugin-nx": "^14.4.2",
+    "@nrwl/express": "^14.4.2",
+    "@nrwl/jest": "^14.4.2",
+    "@nrwl/js": "^14.4.2",
+    "@nrwl/linter": "^14.4.2",
+    "@nrwl/next": "^14.4.2",
+    "@nrwl/node": "^14.4.2",
     "@nrwl/nx-cloud": "^14.0.5",
-    "@nrwl/react": "^14.1.9",
-    "@nrwl/storybook": "^14.1.9",
-    "@nrwl/web": "^14.1.9",
-    "@nrwl/workspace": "14.1.9",
+    "@nrwl/react": "^14.4.2",
+    "@nrwl/storybook": "^14.4.2",
+    "@nrwl/web": "^14.4.2",
+    "@nrwl/workspace": "14.4.2",
     "@testing-library/react": "13.1.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
@@ -54,7 +57,7 @@
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
     "jest": "27.5.1",
-    "nx": "14.1.9",
+    "nx": "14.4.2",
     "prettier": "^2.5.1",
     "react-test-renderer": "18.1.0",
     "sass": "1.43.2",
