--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@capacitor/cli": "^3.6.0",
     "@capacitor/core": "^3.6.0",
     "@ionic/cli": "^6.20.1",
+    "bcrypt": "^5.0.1",
     "core-js": "^3.6.5",
     "express": "4.17.2",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@nrwl/cli": "14.4.2",
     "@nrwl/cypress": "^14.4.2",
     "@nrwl/devkit": "^14.4.2",
@@ -39,11 +42,14 @@
     "@nrwl/web": "^14.4.2",
     "@nrwl/workspace": "14.4.2",
     "@testing-library/react": "13.1.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "4.17.13",
+    "@types/faker": "^6.6.9",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "babel-jest": "27.5.1",
