--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-router-dom": "6.3.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   },
@@ -40,8 +41,10 @@
     "@types/node": "16.11.7",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
+    "autoprefixer": "^10.4.7",
     "babel-jest": "27.5.1",
     "cypress": "10.0.3",
     "eslint": "~8.12.0",
@@ -54,9 +57,11 @@
     "eslint-plugin-react-hooks": "4.5.0",
     "jest": "27.5.1",
     "nx": "14.1.9",
+    "postcss": "^8.4.14",
     "prettier": "^2.5.1",
     "react-test-renderer": "18.1.0",
     "sass": "1.43.2",
+    "tailwindcss": "^3.1.5",
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2"
