--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "6.3.0",
+    "react-select": "^5.4.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   },
@@ -65,7 +66,8 @@
     "jest": "27.5.1",
     "nx": "14.1.9",
     "postcss": "^8.4.14",
-    "prettier": "^2.5.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.12",
     "react-test-renderer": "18.1.0",
     "sass": "1.43.2",
     "tailwindcss": "^3.1.5",
