added routes and main screens

--- a/apps/fast-metro/app/tsconfig.app.json
+++ b/apps/fast-metro/app/tsconfig.app.json
@@ -19,5 +19,11 @@
     "**/*.spec.jsx",
     "**/*.test.jsx"
   ],
-  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
+  "include": [
+    "**/*.js",
+    "**/*.jsx",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/components/shared/TransitAlert/TransitAlert.tsx"
+  ]
 }
