--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "cypress": "10.0.3",
     "eslint": "~8.12.0",
     "eslint-config-next": "12.1.5",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
