--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/core": "^3.6.0",
     "@capacitor/ios": "^3.6.0",
     "@ionic/react": "^6.1.13",
+    "@ionic/react-router": "^6.1.13",
     "@nrwl/next": "14.1.9",
     "core-js": "^3.6.5",
     "express": "4.17.2",
@@ -25,6 +26,7 @@
     "react-router-dom": "6.3.0",
     "react-select": "^5.4.0",
     "regenerator-runtime": "0.13.7",
+    "swiper": "^8.3.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
