--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Bohoth", "Dokki", "Helwan", "moneb", "Swiper"]
+  "cSpell.words": ["Bohoth", "Dokki", "gsap", "Helwan", "moneb", "Swiper"]
 }
