--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nrwl/next": "14.1.9",
     "core-js": "^3.6.5",
     "express": "4.17.2",
+    "gsap": "^3.10.4",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
