--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "core-js": "^3.6.5",
     "express": "4.17.2",
     "gsap": "^3.10.4",
+    "i18next": "^21.8.14",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-i18next": "^11.18.1",
     "react-icons": "^4.4.0",
     "react-router-dom": "6.3.0",
     "react-select": "^5.4.0",
