--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "4.17.2",
     "gsap": "^3.10.4",
     "i18next": "^21.8.14",
+    "i18next-browser-languagedetector": "^6.1.4",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
