--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@nrwl/next": "14.1.9",
     "core-js": "^3.6.5",
     "express": "4.17.2",
+    "fs": "^0.0.1-security",
     "gsap": "^3.10.4",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "next": "12.1.5",
+    "path": "^0.12.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-i18next": "^11.18.1",
