created backend for fast-metro app

--- a/apps/fast-metro/app/project.json
+++ b/apps/fast-metro/app/project.json
@@ -51,7 +51,8 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "fast-metro-app:build",
-        "hmr": true
+        "hmr": true,
+        "proxyConfig": "apps/fast-metro/app/proxy.conf.json"
       },
       "configurations": {
         "development": {
