fix: close the app on back button

--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   },
   "private": true,
   "dependencies": {
-    "@capacitor/android": "^3.6.0",
-    "@capacitor/cli": "^3.6.0",
-    "@capacitor/core": "^3.6.0",
-    "@capacitor/ios": "^3.6.0",
-    "@capacitor/share": "^4.0.1",
+    "@capacitor/android": "3.5.0",
+    "@capacitor/app": "1.1.1",
+    "@capacitor/clipboard": "^1.0.8",
+    "@capacitor/core": "3.5.0",
+    "@capacitor/ios": "3.5.0",
+    "@capacitor/keyboard": "1.2.2",
+    "@capacitor/share": "^1.1.2",
+    "@capacitor/status-bar": "1.0.8",
+    "@capacitor/toast": "^1.0.8",
+    "@capacitor/haptics": "1.1.4",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
+    "es6-promise-plugin": "4.2.2",
     "@ionic/react": "^6.1.13",
     "@ionic/react-router": "^6.1.13",
-    "@nrwl/next": "14.1.9",
     "core-js": "^3.6.5",
     "express": "4.17.2",
     "gsap": "^3.10.4",
@@ -36,7 +42,8 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@ionic/cli": "^6.20.1",
+    "@capacitor/cli": "3.5.0",
+    "@ionic/cli": "6.19.1",
     "@nrwl/cli": "14.1.9",
     "@nrwl/cypress": "^14.1.9",
     "@nrwl/eslint-plugin-nx": "^14.1.9",
