--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "@capacitor/app": "1.1.1",
     "@capacitor/clipboard": "^1.0.8",
     "@capacitor/core": "3.5.0",
+    "@capacitor/haptics": "1.1.4",
     "@capacitor/ios": "3.5.0",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/share": "^1.1.2",
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/toast": "^1.0.8",
-    "@capacitor/haptics": "1.1.4",
-    "cordova-plugin-x-socialsharing": "^6.0.3",
-    "es6-promise-plugin": "4.2.2",
     "@ionic/react": "^6.1.13",
     "@ionic/react-router": "^6.1.13",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
     "core-js": "^3.6.5",
+    "es6-promise-plugin": "4.2.2",
     "express": "4.17.2",
     "gsap": "^3.10.4",
     "i18next": "^21.8.14",
@@ -37,6 +37,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "6.3.0",
     "react-select": "^5.4.0",
+    "react-ticker": "^1.3.2",
     "regenerator-runtime": "0.13.7",
     "swiper": "^8.3.0",
     "tslib": "^2.3.0"
