--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/toast": "^1.0.8",
     "@ionic/react": "^6.1.13",
     "@ionic/react-router": "^6.1.13",
+    "bcrypt": "^5.0.1",
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "core-js": "^3.6.5",
     "es6-promise-plugin": "4.2.2",
@@ -60,12 +61,14 @@
     "@nrwl/web": "^14.1.9",
     "@nrwl/workspace": "14.1.9",
     "@testing-library/react": "13.1.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
     "@types/react-router-dom": "5.3.3",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "autoprefixer": "^10.4.7",
