--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "3.5.0",
+    "@faker-js/faker": "^7.3.0",
     "@ionic/cli": "6.19.1",
     "@nrwl/cli": "14.1.9",
     "@nrwl/cypress": "^14.1.9",
