--- a/libs/iam/project.json
+++ b/libs/iam/project.json
@@ -5,18 +5,22 @@
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/libs/iam",
         "main": "libs/iam/src/index.ts",
         "tsConfig": "libs/iam/tsconfig.lib.json",
-        "assets": ["libs/iam/*.md"]
+        "assets": [
+          "libs/iam/*.md"
+        ]
       }
     },
     "publish": {
       "executor": "@nrwl/workspace:run-commands",
       "options": {
-        "command": "node tools/scripts/publish.mjs ums {args.ver} {args.tag}"
+        "command": "node tools/scripts/publish.mjs iam {args.ver} {args.tag}"
       },
       "dependsOn": [
         {
@@ -27,14 +31,20 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["libs/iam/**/*.ts"]
+        "lintFilePatterns": [
+          "libs/iam/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/iam"],
+      "outputs": [
+        "coverage/libs/iam"
+      ],
       "options": {
         "jestConfig": "libs/iam/jest.config.ts",
         "passWithNoTests": true
