--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {},
+    "paths": {
+      "@toctive/iam": ["libs/iam/src/index.ts"]
+    },
     "resolveJsonModule": true,
     "esModuleInterop": true
   },
