--- a/apps/toctive-dashboard/frontend/project.json
+++ b/apps/toctive-dashboard/frontend/project.json
@@ -12,7 +12,9 @@
         "outputPath": "dist/apps/toctive-dashboard/frontend"
       },
       "configurations": {
-        "development": {},
+        "development": {
+          "outputPath": "apps/toctive-dashboard/frontend"
+        },
         "production": {}
       }
     },
