--- a/package.json
+++ b/package.json
@@ -20,20 +20,28 @@
     "@capacitor/share": "^1.1.2",
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/toast": "^1.0.8",
+    "@docusaurus/core": "2.0.0-beta.13",
+    "@docusaurus/preset-classic": "2.0.0-beta.13",
     "@ionic/react": "^6.1.13",
     "@ionic/react-router": "^6.1.13",
+    "@mdx-js/react": "^1.6.21",
+    "@storybook/builder-webpack5": "~6.5.4",
+    "@storybook/core-server": "~6.5.4",
+    "@storybook/manager-webpack5": "~6.5.4",
     "bcrypt": "^5.0.1",
+    "clsx": "^1.1.1",
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "core-js": "^3.6.5",
     "es6-promise-plugin": "4.2.2",
-    "express": "4.17.2",
+    "express": "4.18.1",
     "gsap": "^3.10.4",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "mongoose": "^6.4.6",
     "next": "12.1.5",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "prism-react-renderer": "^1.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "^11.18.1",
     "react-icons": "^4.4.0",
     "react-router-dom": "6.3.0",
@@ -45,54 +53,56 @@
   },
   "devDependencies": {
     "@capacitor/cli": "3.5.0",
+    "@docusaurus/module-type-aliases": "2.0.0-beta.13",
     "@faker-js/faker": "^7.3.0",
     "@ionic/cli": "6.19.1",
-    "@nrwl/cli": "14.1.9",
-    "@nrwl/cypress": "^14.1.9",
-    "@nrwl/eslint-plugin-nx": "^14.1.9",
-    "@nrwl/express": "^14.1.9",
-    "@nrwl/jest": "^14.1.9",
-    "@nrwl/js": "^14.1.9",
-    "@nrwl/linter": "^14.1.9",
-    "@nrwl/next": "^14.1.9",
-    "@nrwl/node": "^14.1.9",
-    "@nrwl/nx-cloud": "^14.0.5",
-    "@nrwl/react": "^14.1.9",
-    "@nrwl/storybook": "^14.1.9",
-    "@nrwl/web": "^14.1.9",
-    "@nrwl/workspace": "14.1.9",
-    "@testing-library/react": "13.1.1",
+    "@nrwl/cli": "14.5.4",
+    "@nrwl/cypress": "14.5.4",
+    "@nrwl/eslint-plugin-nx": "14.5.4",
+    "@nrwl/express": "14.5.4",
+    "@nrwl/jest": "14.5.4",
+    "@nrwl/js": "14.5.4",
+    "@nrwl/linter": "14.5.4",
+    "@nrwl/next": "14.5.4",
+    "@nrwl/node": "14.5.4",
+    "@nrwl/nx-cloud": "14.3.0",
+    "@nrwl/react": "14.5.4",
+    "@nrwl/storybook": "14.5.4",
+    "@nrwl/web": "14.5.4",
+    "@nrwl/workspace": "14.5.4",
+    "@nx-plus/docusaurus": "^14.1.0",
+    "@testing-library/react": "13.3.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
-    "@types/node": "16.11.7",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.3",
+    "@types/node": "18.6.3",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "~5.18.0",
-    "@typescript-eslint/parser": "~5.18.0",
-    "autoprefixer": "^10.4.7",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
+    "autoprefixer": "10.4.8",
     "babel-jest": "27.5.1",
     "cypress": "10.0.3",
-    "eslint": "~8.12.0",
+    "eslint": "8.15.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.5.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "4.6.0",
     "jest": "27.5.1",
-    "nx": "14.1.9",
+    "nx": "14.5.4",
     "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
+    "prettier": "2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.12",
-    "react-test-renderer": "18.1.0",
+    "react-test-renderer": "18.2.0",
     "sass": "1.43.2",
-    "tailwindcss": "^3.1.5",
+    "tailwindcss": "3.1.7",
     "ts-jest": "27.1.4",
-    "ts-node": "9.1.1",
-    "typescript": "~4.6.2"
+    "ts-node": "10.8.2",
+    "typescript": "4.7.4"
   }
 }
