--- a/libs/iam/project.json
+++ b/libs/iam/project.json
@@ -5,16 +5,12 @@
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/libs/iam",
         "main": "libs/iam/src/index.ts",
         "tsConfig": "libs/iam/tsconfig.lib.json",
-        "assets": [
-          "libs/iam/*.md"
-        ]
+        "assets": ["libs/iam/*.md"]
       }
     },
     "publish": {
@@ -31,20 +27,14 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "libs/iam/**/*.ts"
-        ]
+        "lintFilePatterns": ["libs/iam/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/libs/iam"
-      ],
+      "outputs": ["coverage/libs/iam"],
       "options": {
         "jestConfig": "libs/iam/jest.config.ts",
         "passWithNoTests": true
