--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "react-dom": "18.2.0",
     "react-i18next": "^11.18.1",
     "react-icons": "^4.4.0",
+    "react-is": "18.2.0",
     "react-router-dom": "6.3.0",
     "react-select": "^5.4.0",
     "react-ticker": "^1.3.2",
     "regenerator-runtime": "0.13.7",
+    "styled-components": "5.3.5",
     "swiper": "^8.3.0",
     "tslib": "^2.3.0"
   },
@@ -78,12 +80,15 @@
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-is": "17.0.3",
     "@types/react-router-dom": "5.3.3",
+    "@types/styled-components": "5.1.25",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
     "autoprefixer": "10.4.8",
     "babel-jest": "27.5.1",
+    "babel-plugin-styled-components": "1.10.7",
     "cypress": "10.0.3",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.5",
