--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
-    "autoprefixer": "10.4.8",
+    "autoprefixer": "^10.4.8",
     "babel-jest": "27.5.1",
     "babel-plugin-styled-components": "1.10.7",
     "cypress": "10.0.3",
@@ -100,12 +100,12 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "27.5.1",
     "nx": "14.5.4",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "prettier": "2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.12",
     "react-test-renderer": "18.2.0",
     "sass": "1.43.2",
-    "tailwindcss": "3.1.7",
+    "tailwindcss": "^3.1.8",
     "ts-jest": "27.1.4",
     "ts-node": "10.8.2",
     "typescript": "4.7.4"
