install moment and nprogress

--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "gsap": "^3.10.4",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
+    "moment": "^2.29.4",
     "mongoose": "^6.4.6",
     "next": "12.1.5",
+    "nprogress": "^0.2.0",
     "prism-react-renderer": "^1.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
