--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "18.6.3",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/react-is": "17.0.3",
