--- a/apps/toctive-blog/frontend/project.json
+++ b/apps/toctive-blog/frontend/project.json
@@ -23,7 +23,8 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "toctive-blog-frontend:build",
-        "dev": true
+        "dev": true,
+        "proxyConfig": "apps/toctive-blog/frontend/proxy.conf.json"
       },
       "configurations": {
         "development": {
