--- a/apps/toctive-blog/frontend/tsconfig.json
+++ b/apps/toctive-blog/frontend/tsconfig.json
@@ -13,6 +13,13 @@
     "incremental": true,
     "types": ["jest", "node"]
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
+    "next-env.d.ts",
+    "../../../libs/toctive-blog/src/lib/PostI.tsx"
+  ],
   "exclude": ["node_modules", "jest.config.ts"]
 }
