--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@docusaurus/preset-classic": "2.0.0-beta.13",
     "@ionic/react": "^6.1.13",
     "@ionic/react-router": "^6.1.13",
-    "@mdx-js/react": "^1.6.21",
+    "@mdx-js/react": "^2.1.3",
     "@storybook/builder-webpack5": "~6.5.4",
     "@storybook/core-server": "~6.5.4",
     "@storybook/manager-webpack5": "~6.5.4",
@@ -40,6 +40,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.4.6",
     "next": "12.1.5",
+    "next-mdx-remote": "^4.1.0",
     "nprogress": "^0.2.0",
     "prism-react-renderer": "^1.2.1",
     "react": "18.2.0",
