Create basic backend for toctive blog Using Express.js, the project will manage posts, users, and comments.
Changes to be committed:
	new file:   apps/toctive-blog/backend/.eslintrc.json
	new file:   apps/toctive-blog/backend/jest.config.ts
	new file:   apps/toctive-blog/backend/project.json
	new file:   apps/toctive-blog/backend/src/app/.gitkeep
	new file:   apps/toctive-blog/backend/src/app/controllers/postController.ts
	new file:   apps/toctive-blog/backend/src/app/routes/posts.ts
	new file:   apps/toctive-blog/backend/src/assets/.gitkeep
	new file:   apps/toctive-blog/backend/src/environments/environment.prod.ts
	new file:   apps/toctive-blog/backend/src/environments/environment.ts
	new file:   apps/toctive-blog/backend/src/main.ts
	new file:   apps/toctive-blog/backend/tsconfig.app.json
	new file:   apps/toctive-blog/backend/tsconfig.json
	new file:   apps/toctive-blog/backend/tsconfig.spec.json
	modified:   tsconfig.base.json
	modified:   workspace.json
	modified:   yarn.lock

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@toctive/iam": ["libs/iam/src/index.ts"]
+      "@toctive/iam": ["libs/iam/src/index.ts"],
+      "@toctive/toctive-blog": ["libs/toctive-blog/src/index.ts"]
     },
     "resolveJsonModule": true,
     "esModuleInterop": true
