Created @toctive/react-utils to use global hooks and helpers in React apps.
Changes to be committed:
	new file:   libs/toctive-react-utils/.babelrc
	new file:   libs/toctive-react-utils/.eslintrc.json
	new file:   libs/toctive-react-utils/README.md
	new file:   libs/toctive-react-utils/jest.config.ts
	new file:   libs/toctive-react-utils/package.json
	new file:   libs/toctive-react-utils/project.json
	new file:   libs/toctive-react-utils/src/index.ts
	new file:   libs/toctive-react-utils/src/lib/hooks/index.ts
	new file:   libs/toctive-react-utils/src/lib/hooks/useDirection.ts
	new file:   libs/toctive-react-utils/src/lib/pageDirection.ts
	new file:   libs/toctive-react-utils/src/lib/windowDefined.ts
	new file:   libs/toctive-react-utils/tsconfig.json
	new file:   libs/toctive-react-utils/tsconfig.lib.json
	new file:   libs/toctive-react-utils/tsconfig.spec.json
	modified:   tsconfig.base.json
	modified:   workspace.json

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@toctive/iam": ["libs/iam/src/index.ts"],
+      "@toctive/react-utils": ["libs/toctive-react-utils/src/index.ts"],
       "@toctive/toctive-blog": ["libs/toctive-blog/src/index.ts"]
     },
     "resolveJsonModule": true,
