feat: translate the blog into ar/en
Start using next-i18next for translations

next-i18next's serverSideTranslations function doesn't work with NX.
So, we have to use a function as a wrapper of
serverSideTranslations and create userConfig object from scratch.

Changes to be committed:
	modified:   apps/toctive-blog/backend/src/app/controllers/postController.ts
	new file:   apps/toctive-blog/frontend/assets/js/serverSideTranslationsWithNX.ts
	modified:   apps/toctive-blog/frontend/components/layout/footer/footer.tsx
	modified:   apps/toctive-blog/frontend/components/layout/navbar/navbar.tsx
	modified:   apps/toctive-blog/frontend/components/layout/section-header/section-header.tsx
	modified:   apps/toctive-blog/frontend/components/layout/slider/slider.tsx
	modified:   apps/toctive-blog/frontend/components/shared/post/post.tsx
	new file:   apps/toctive-blog/frontend/next-i18next.config.js
	modified:   apps/toctive-blog/frontend/next.config.js
	modified:   apps/toctive-blog/frontend/pages/_app.tsx
	modified:   apps/toctive-blog/frontend/pages/_document.tsx
	modified:   apps/toctive-blog/frontend/pages/index.tsx
	modified:   apps/toctive-blog/frontend/pages/posts/[post-id].tsx
	modified:   apps/toctive-blog/frontend/pages/posts/index.tsx
	new file:   apps/toctive-blog/frontend/public/locales/ar/common.json
	new file:   apps/toctive-blog/frontend/public/locales/ar/home.json
	new file:   apps/toctive-blog/frontend/public/locales/en/common.json
	new file:   apps/toctive-blog/frontend/public/locales/en/home.json
	modified:   libs/toctive-react-utils/package.json
	modified:   libs/toctive-react-utils/tsconfig.json
	modified:   package.json
	modified:   yarn.lock

--- a/libs/toctive-react-utils/package.json
+++ b/libs/toctive-react-utils/package.json
@@ -1,4 +1,9 @@
 {
   "name": "@toctive/react-utils",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  }
 }
