--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.4.6",
     "next": "12.2.5",
+    "next-i18next": "^12.0.0",
     "next-mdx-remote": "^4.1.0",
     "nprogress": "^0.2.0",
     "prism-react-renderer": "^1.2.1",
