--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,9 @@
     "baseUrl": ".",
     "paths": {},
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true
   },
   "exclude": ["node_modules", "tmp"]
 }
