--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "core-js": "^3.6.5",
     "es6-promise-plugin": "4.2.2",
-    "express": "4.17.2",
+    "express": "4.18.1",
     "gsap": "^3.10.4",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "mongoose": "^6.4.6",
-    "next": "12.1.5",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "^11.18.1",
     "react-icons": "^4.4.0",
     "react-router-dom": "6.3.0",
@@ -40,55 +40,59 @@
     "react-ticker": "^1.3.2",
     "regenerator-runtime": "0.13.7",
     "swiper": "^8.3.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@storybook/core-server": "~6.5.4",
+    "@storybook/builder-webpack5": "~6.5.4",
+    "@storybook/manager-webpack5": "~6.5.4"
   },
   "devDependencies": {
     "@capacitor/cli": "3.5.0",
     "@ionic/cli": "6.19.1",
-    "@nrwl/cli": "14.1.9",
-    "@nrwl/cypress": "^14.1.9",
-    "@nrwl/eslint-plugin-nx": "^14.1.9",
-    "@nrwl/express": "^14.1.9",
-    "@nrwl/jest": "^14.1.9",
-    "@nrwl/js": "^14.1.9",
-    "@nrwl/linter": "^14.1.9",
-    "@nrwl/next": "^14.1.9",
-    "@nrwl/node": "^14.1.9",
-    "@nrwl/nx-cloud": "^14.0.5",
-    "@nrwl/react": "^14.1.9",
-    "@nrwl/storybook": "^14.1.9",
-    "@nrwl/web": "^14.1.9",
-    "@nrwl/workspace": "14.1.9",
-    "@testing-library/react": "13.1.1",
+    "@nrwl/cli": "14.6.2",
+    "@nrwl/cypress": "14.6.2",
+    "@nrwl/eslint-plugin-nx": "14.6.2",
+    "@nrwl/express": "14.6.2",
+    "@nrwl/jest": "14.6.2",
+    "@nrwl/js": "14.6.2",
+    "@nrwl/linter": "14.6.2",
+    "@nrwl/next": "14.6.2",
+    "@nrwl/node": "14.6.2",
+    "@nrwl/nx-cloud": "14.6.0",
+    "@nrwl/react": "14.6.2",
+    "@nrwl/storybook": "14.6.2",
+    "@nrwl/web": "14.6.2",
+    "@nrwl/workspace": "14.6.2",
+    "@testing-library/react": "13.3.0",
     "@types/express": "4.17.13",
-    "@types/jest": "27.4.1",
-    "@types/node": "16.11.7",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.3",
+    "@types/jest": "28.1.8",
+    "@types/node": "18.7.14",
+    "@types/react": "18.0.18",
+    "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "~5.18.0",
-    "@typescript-eslint/parser": "~5.18.0",
-    "autoprefixer": "^10.4.7",
-    "babel-jest": "27.5.1",
+    "@typescript-eslint/eslint-plugin": "5.33.1",
+    "@typescript-eslint/parser": "5.33.1",
+    "autoprefixer": "10.4.8",
+    "babel-jest": "28.1.3",
     "cypress": "10.0.3",
-    "eslint": "~8.12.0",
-    "eslint-config-next": "12.1.5",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.5.0",
-    "jest": "27.5.1",
-    "nx": "14.1.9",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "28.1.3",
+    "nx": "14.6.2",
+    "postcss": "8.4.16",
+    "prettier": "2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.12",
-    "react-test-renderer": "18.1.0",
-    "sass": "1.43.2",
-    "tailwindcss": "^3.1.5",
-    "ts-jest": "27.1.4",
-    "ts-node": "9.1.1",
-    "typescript": "~4.6.2"
+    "react-test-renderer": "18.2.0",
+    "sass": "1.54.5",
+    "tailwindcss": "3.1.8",
+    "ts-jest": "28.0.8",
+    "ts-node": "10.9.1",
+    "typescript": "4.7.4"
   }
 }
+
