--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor-community/admob": "^4.0.0",
     "@capacitor/android": "3.5.0",
     "@capacitor/app": "1.1.1",
+    "@capacitor/browser": "^4.0.1",
     "@capacitor/clipboard": "^1.0.8",
     "@capacitor/core": "3.5.0",
     "@capacitor/haptics": "1.1.4",
