--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@capacitor/toast": "^1.0.8",
     "@ionic/react": "^6.1.13",
     "@ionic/react-router": "^6.1.13",
+    "@storybook/builder-webpack5": "~6.5.4",
+    "@storybook/core-server": "~6.5.4",
+    "@storybook/manager-webpack5": "~6.5.4",
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "core-js": "^3.6.5",
     "es6-promise-plugin": "4.2.2",
@@ -43,10 +46,7 @@
     "react-ticker": "^1.3.2",
     "regenerator-runtime": "0.13.7",
     "swiper": "^8.3.0",
-    "tslib": "^2.3.0",
-    "@storybook/core-server": "~6.5.4",
-    "@storybook/builder-webpack5": "~6.5.4",
-    "@storybook/manager-webpack5": "~6.5.4"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@capacitor/cli": "3.5.0",
@@ -86,6 +86,7 @@
     "eslint-plugin-react": "7.31.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.1",
     "nx": "14.6.2",
     "postcss": "8.4.16",
     "prettier": "2.6.2",
