--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "@storybook/builder-webpack5": "~6.5.4",
     "@storybook/core-server": "~6.5.4",
     "@storybook/manager-webpack5": "~6.5.4",
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "es6-promise-plugin": "4.2.2",
     "express": "4.18.1",
     "gsap": "^3.10.4",
+    "http-errors": "^2.0.0",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "mongoose": "^6.4.6",
@@ -46,7 +50,8 @@
     "react-ticker": "^1.3.2",
     "regenerator-runtime": "0.13.7",
     "swiper": "^8.3.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@capacitor/cli": "3.5.0",
@@ -66,12 +71,17 @@
     "@nrwl/web": "14.6.2",
     "@nrwl/workspace": "14.6.2",
     "@testing-library/react": "13.3.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
     "@types/express": "4.17.13",
+    "@types/http-errors": "^2.0.1",
     "@types/jest": "28.1.8",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "5.33.1",
     "@typescript-eslint/parser": "5.33.1",
     "autoprefixer": "10.4.8",
