chore: install mongoose types and isemail package

--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "@storybook/builder-webpack5": "~6.5.4",
     "@storybook/core-server": "~6.5.4",
     "@storybook/manager-webpack5": "~6.5.4",
+    "@types/mongoose": "^5.11.97",
+    "@types/passport": "^1.0.11",
+    "@types/passport-jwt": "^3.0.7",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cordova-plugin-x-socialsharing": "^6.0.3",
@@ -39,8 +43,12 @@
     "http-errors": "^2.0.0",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
+    "isemail": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
     "next": "12.2.5",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^11.18.1",
@@ -71,6 +79,7 @@
     "@nrwl/web": "14.6.2",
     "@nrwl/workspace": "14.6.2",
     "@testing-library/react": "13.3.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
