docs: add README and LICENSE files

--- a/apps/auth-server/.env.example
+++ b/apps/auth-server/.env.example
@@ -1,8 +1,9 @@
+# MongoDB connection string
 MONGODB_URL=
 
-# Server running on localhost:{PORT}
+# Port to run the server on localhost:{PORT}
 PORT=
 
-# Keys to generate tokens
+# JWT keys to generate tokens
 ACCESS_TOKEN_PRIVATE_KEY=
 REFRESH_TOKEN_PRIVATE_KEY=
